Improve cursor pagination